Create candidate application submission page with AI quota fallback match engine